--- a/conf/upstreamr.conf
+++ b/conf/upstreamr.conf
@@ -11,6 +11,16 @@ comparison_operator=contains
 # You can create these in Environment Manager
 filter_expression=["a01", "a02", "a03"]
 
+[em]
+# In case we want to use Environment Manager as our source of information
+# This behaviour is managed in the [templates] -> data_source parameter
+# Server that we will connect to, needs to have Environment Manager installed and SSL on
+server=localhost
+# User in Environment Manager that we use to authenticate ourselves
+user=username
+# Password for our authentication user
+password=my_secure_password
+
 [asg]
 # Indicate if we want to use a DynamoDB table to publish DNS for ASGs
 # We create this asg table as part of our Auto Scaling Groups deployment and add
@@ -27,6 +37,8 @@ asg_key=AsgName
 asg_value=IPs
 # Every how many seconds we will be refreshing the information
 refresh_rate=20
+# Enable debug on thread
+debug=false
 
 [consul]
 # Indicate if we want to use Consul to discover services
@@ -50,6 +62,8 @@ consul_file_dir=/tmp
 consul_mappings=["consul-datacenter|a01;a02|1.2.3.4;1.2.3.5|aaaa-token-aaa"]
 # Every how many seconds we will be refreshing the information
 refresh_rate=20
+# Enable debug on thread
+debug=false
 
 [templates]
 # This is the configuration for our main Template Thread
@@ -63,6 +77,12 @@ destination_directory=/etc/nginx/upstreamr.d
 # What template do we need to generate those files
 # it is based on Jinja2 (http://jinja.pocoo.org/docs/dev/templates/)
 template_file=/etc/upstreamr/templates/nginx_upstream.template
+# Where do we get our template info from (current options: em, dynamodb)
+data_source=em
+# This will be used to filter which results we will treat, its an array of valid objects. "all" is the magic word
+data_filter=["a01", "a02", "a03"]
+# Data operator, can either be startswith, contains, endswith or all as a magic word
+data_operator=startswith
 # This name will be built with the data_field and the {{}} as array members
 filename_pattern={{ data['UpstreamName'] }}.upstream.conf
 # Data field that we will pass onto the template to build everything, if set to "all" it'll pass the whole return
@@ -76,29 +96,18 @@ reload_sns_notification_endpoints=
 reload_command=/usr/sbin/service nginx reload
 # SNS endpoints for alerting if the reload didnt work
 reload_sns_alert_endpoints=
+# Reload limit on every how many seconds we can reload nginx
+reload_time_limit=20
+## Reload limits for single upstream
+# Every how many reload requests we declare this as a malfeasant (also we need the catching time below)
+reload_single_upstream_limit_trigger=5
+# What is the total reload exposure time (in seconds) for those reloads to set the trigger on, so for example we can say 5 reloads trigger in 120 seconds
+reload_single_upstream_limit_trigger_catching_time=300
+# Once this is triggered every how many seconds will we reload nginx for this upstream, something like every 5 mins perhaps?
+reload_single_upstream_limit_time=1800
+# After how many seconds we declare this service is not spurious and we can reset the trigger flag
+reload_single_upstream_limit_cool_off_time=900
 # Every how many seconds we run the Template Engine
 refresh_rate=10
-
-[dnsrefresher]
-# The DNS Refresher is an early prototype of Upstreamr, right now we are not
-# using it, it does read files and identify where to look for DNS names
-# it will resolve them and come back with a series of IPs and overwrite anything
-# that is wrong. We found this method to be a bit too unpredictable for our liking.
-# Do we want to run (true|false)
-enable=false
-# Our destination directory for files
-# We will read from this directory too
-destination_directory=/etc/nginx/upstreamr.d
-## Regexp reference at https://docs.python.org/2/library/re.html
-# What regexp for filename patterns we looking for
-filename_filter=(.*)\.upstream\.conf$
-# Matching regeexp for matching DNS definition/name line, we want to extract so the match should be named data
-dns_line_filter=(\s+)# Generating data for DNS host (?P<data>.*)
-# SNS endpoints for alerting when we modify a file
-reload_sns_notification_endpoints=
-# Reload command after a file or files is/are modified
-reload_command=/usr/sbin/service nginx reload
-# SNS endpoints for alerting if the reload didnt work
-reload_sns_alert_endpoints=
-# DNS Refresh, every how many seconds do we iterate over the files
-refresh_rate=10
+# Enable debug on thread
+debug=false
