Add EM class abstraction

--- a/conf/upstreamr.conf
+++ b/conf/upstreamr.conf
@@ -20,6 +20,10 @@ server=localhost
 user=username
 # Password for our authentication user
 password=my_secure_password
+# EM operation that we want to query from the API library
+operation=get_upstreams_config
+# EM operation parameters (can be empty {} if needed)
+operation_paramaters = {}
 
 [asg]
 # Indicate if we want to use a DynamoDB table to publish DNS for ASGs
