--- a/conf/upstreamr.conf
+++ b/conf/upstreamr.conf
@@ -94,6 +94,8 @@ filename_pattern={{ data['UpstreamName'] }}.upstream.conf
 data_field=value
 # Json decode the data_field data
 json_decode=true
+# Reload if active has zero results
+reload_zero_results=false
 # SNS endpoints for alerting when we modify a file
 reload_sns_notification_endpoints=
 # Reload command after a file or files is/are modified
