Add new shutdown feature

--- a/conf/upstreamr.conf
+++ b/conf/upstreamr.conf
@@ -44,6 +44,17 @@ refresh_rate=20
 # Enable debug on thread
 debug=false
 
+[shutdown]
+# Detect instance shutting down
+# This will detect if an instance is already shutting down, this way we can remove it and not send traffic to it
+detect_shutdown=true
+# Shutdown file to write the results to, this will be consumed later by the template engine
+shutdown_file=/tmp/shutdown_detect_upstreamr.json
+# Every how many seconds we will be refreshing the information
+refresh_rate=60
+# Enable debug on thread
+debug=false
+
 [consul]
 # Indicate if we want to use Consul to discover services
 # We use Consul internally to publish services with consul-deployment-agent,
@@ -94,7 +105,7 @@ filename_pattern={{ data['UpstreamName'] }}.upstream.conf
 data_field=value
 # Json decode the data_field data
 json_decode=true
-# Reload if active has zero results
+# Reload if active slice has zero results
 reload_zero_results=false
 # SNS endpoints for alerting when we modify a file
 reload_sns_notification_endpoints=
